# dr-haskell

./: .gitignore  .gitlab-ci.yml  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  dockerfile  drhaskell.cabal  install_linux.sh
dockercalls/: drhaskell-lint  drhaskell-lint.bat  drhaskell-lint.sh  drhaskell.bat  drhaskell.sh  linux-drhaskell-lint.sh  linux-drhaskell.sh
examples/: Tree.hs  TreeConv.hs  TreeConvTyped.hs  ex1.hs  ex_tests.hs  l0.hs  l1.hs  l2.hs  l3.hs
plugins/emacs/: haskell-drhaskell.el  haskell-hugs.el
presentation/: .gitignore  analyse.tex  architecture.key  ausblick.tex  drhaskell.tex  drhaskell.vrb  einleitung.tex  fazit.tex  installation.tex  softwarearchitektur.tex  tests.tex  typeinference.tex  vorfuehrung.tex
res/TargetModules/: MyPrelude.hs  StartupEnvironment.hs  Tests.hs
res/Testing/: templates.hs
src/: Abstract.hs  DrHaskellLint.hs  Goodies.hs  Multicall.hs  SCC.hs  Test.hs
src/AstChecks/: Abstract.hs  Check.hs  Derivings.hs  Derivings.hstest  HigherOrder.hs  HigherOrder.hstest  Lambda.hs  Lambda.hstest  TypeVars.hs  TypeVars.hstest
src/CodeCoverage/: Coverage.hs
src/PreludeHandling/: Hider.hs
src/Repl/: CmdOptions.hs  Loader.hs  Main.hs  Types.hs
src/StaticAnalysis/: AllChecks.hs  CheckState.hs  Level.hs
src/StaticAnalysis/Messages/: ErrorToLint.hs  Prettify.hs  StaticErrors.hs
src/StaticAnalysis/StaticChecks/: Derivings.hs  DoUsed.hs  Duplicated.hs  HigherOrder.hs  HigherOrder.hstest  ImportUsed.hs  Lambda.hs  Lambda.hstest  ModuleHeadUsed.hs  NoFunDef.hs  NoTypeDef.hs  OwnDataDecl.hs  Pragma.hs  Record.hs  Select.hs  Shadowing.hs  Shadowing.hstest  StaticChecks.hs  Test.hs  Test.hstest  TypeInstance.hs  TypeVarApplication.hs  TypeVars.hs  Undefined.hs
src/Testing/: ArbitGen.hs  ModifyAst.hs  TestExpExtractor.hs
src/TypeInference/: AHAbstract.hs  AHAddVariables.hs  AbstractHaskell.hs  AbstractHaskellGoodies.hs  HSE2AH.hs  HSEConversion.hs  Main.hs  MyPrelude.hs  Normalization.hs  SCC.hs  Substitution.hs  Term.hs  Test.hs  TypeSig.hs  TypeSubstitution.hs  TypeSyn.hs  Unification.hs  astToAbstract.hs  extractTypeSig.hs
src/Util/: ModifyAst.hs
