name:               drhaskell
version:            0.1.0
synopsis:           (none)
description:        (none)
author:             Niels Bunkenburg, Jonas Busse, Janina Harms, Jan-Hendrik Matthes, Marc André Wittorf
maintainer:         (none)
copyright:          (c) 2017 Niels Bunkenburg, Jonas Busse, Janina Harms, Jan-Hendrik Matthes, Marc André Wittorf
license:            BSD3
license-file:       LICENSE
category:           Teaching
build-type:         Simple
stability:          Experimental
cabal-version:      >=1.10
tested-with:        GHC >=7.10.3
homepage:           https://git.ps.informatik.uni-kiel.de/student-projects/mapro-2017-ss
bug-reports:        https://git.ps.informatik.uni-kiel.de/student-projects/mapro-2017-ss/issues
extra-source-files: CHANGELOG.md
                    README.md
data-dir:           res
data-files:         TargetModules/MyPrelude.hs
                    TargetModules/StartupEnvironment.hs
                    TargetModules/Tests.hs
                    Testing/templates.hs

source-repository head
  type:     git
  location: https://git.ps.informatik.uni-kiel.de/student-projects/mapro-2017-ss.git

flag multicall
  description: Put all functionality into one executable.
  default:     False

executable drhaskell
  if flag(multicall)
    buildable: False
  else
    buildable: True
  hs-source-dirs:   src
  main-is:          Repl/Main.hs
  default-language: Haskell2010
  ghc-options:      -O2 -j4 -main-is Repl.Main
  build-depends:    base >=4.8 && <5.0,
                    containers,
                    directory,
                    edit-distance >=0.2.2.1,
                    exceptions >=0.8,
                    filepath,
                    ghc-paths >=0.1 && <0.2,
                    haskeline >=0.7 && <0.8,
                    haskell-src-exts >=1.19 && <1.20,
                    hint >=0.7,
                    hlint >=2.0.9,
                    hpc,
                    json >=0.9.1,
                    lens,
                    MissingH >=1.4.0.1,
                    mtl >=2.2 && <2.3,
                    process,
                    QuickCheck >=2.10.1,
                    split,
                    temporary,
                    transformers

executable drhaskell-lint
  if flag(multicall)
    buildable: False
  else
    buildable: True
  hs-source-dirs:   src
  main-is:          DrHaskellLint.hs
  default-language: Haskell2010
  ghc-options:      -O2 -j4 -main-is DrHaskellLint
  build-depends:    base >=4.8 && <5.0,
                    containers,
                    directory,
                    edit-distance >=0.2.2.1,
                    exceptions >=0.8,
                    filepath,
                    ghc-paths >=0.1 && <0.2,
                    haskeline >=0.7 && <0.8,
                    haskell-src-exts >=1.19 && <1.20,
                    hint >=0.7,
                    hlint >=2.0.9,
                    hpc,
                    json >=0.9.1,
                    lens,
                    MissingH >=1.4.0.1,
                    mtl >=2.2 && <2.3,
                    process,
                    QuickCheck >=2.10.1,
                    split,
                    temporary,
                    transformers

executable drhaskell-multicall
  if flag(multicall)
    buildable: True
  else
    buildable: False
  hs-source-dirs:   src
  main-is:          Multicall.hs
  default-language: Haskell2010
  ghc-options:      -O2 -j4 -main-is Multicall
  build-depends:    base >=4.8 && <5.0,
                    containers,
                    directory,
                    edit-distance >=0.2.2.1,
                    exceptions >=0.8,
                    filepath,
                    ghc-paths >=0.1 && <0.2,
                    haskeline >=0.7 && <0.8,
                    haskell-src-exts >=1.19 && <1.20,
                    hint >=0.7,
                    hlint >=2.0.9,
                    hpc,
                    json >=0.9.1,
                    lens,
                    MissingH >=1.4.0.1,
                    mtl >=2.2 && <2.3,
                    process,
                    QuickCheck >=2.10.1,
                    split,
                    temporary,
                    transformers
