name:               drhaskell
version:            0.2.0
synopsis:           (none)
description:        (none)
author:             Niels Bunkenburg, Jonas Busse, Janina Harms, Jan-Hendrik Matthes, Marc André Wittorf
maintainer:         (none)
copyright:          (c) 2017 Niels Bunkenburg, Jonas Busse, Janina Harms, Jan-Hendrik Matthes, Marc André Wittorf
license:            BSD3
license-file:       LICENSE
category:           Teaching
build-type:         Simple
stability:          Experimental
cabal-version:      >=1.22
tested-with:        GHC >=8.2.1
homepage:           https://git.ps.informatik.uni-kiel.de/student-projects/mapro-2017-ss
bug-reports:        https://git.ps.informatik.uni-kiel.de/student-projects/mapro-2017-ss/issues
extra-source-files: CHANGELOG.md
                    README.md
data-dir:           res
data-files:         TargetModules/*.hs
                    Testing/*.hs

source-repository head
  type:     git
  location: https://git.ps.informatik.uni-kiel.de/student-projects/mapro-2017-ss.git

flag multicall
  description: Put all functionality into one executable.
  default:     False

executable drhaskell
  if flag(multicall)
    buildable: False
  else
    buildable: True
  hs-source-dirs:   src
  main-is:          Repl/Main.hs
  default-language: Haskell2010
  ghc-options:      -O2 -j4 -main-is Repl.Main
  build-depends:    base >=4.8 && <5.0,
                    bytestring >=0.10.8.2,
                    containers >=0.5.6.2,
                    directory >=1.3 && <2.0,
                    edit-distance >=0.2.2.1 && <0.3,
                    exceptions >=0.8,
                    filepath >=1.4 && <2.0,
                    haskeline >=0.7.4 && <0.8,
                    haskell-src-exts >=1.19 && <2.0,
                    hint >=0.7 && <0.8,
                    hlint >=2.0.9 && <3.0,
                    hpc >=0.6 && <0.7,
                    http-conduit >= 2.2.3.2,
                    json >=0.9.1,
                    lens >=4.15 && <5.0,
                    MissingH >=1.4.0.1 && <2.0,
                    mtl >=2.2 && <3.0,
                    process >=1.4 && <2.0,
                    QuickCheck >=2.10.1 && <3.0,
                    split >=0.2.3 && <0.3,
                    temporary >=1.2.0 && <2.0,
                    transformers >=0.4 && <0.6

executable drhaskell-lint
  if flag(multicall)
    buildable: False
  else
    buildable: True
  hs-source-dirs:   src
  main-is:          DrHaskellLint.hs
  default-language: Haskell2010
  ghc-options:      -O2 -j4 -main-is DrHaskellLint
  build-depends:    base >=4.8 && <5.0,
                    containers >=0.5.6.2,
                    directory >=1.3 && <2.0,
                    edit-distance >=0.2.2.1 && <0.3,
                    exceptions >=0.8,
                    filepath >=1.4 && <2.0,
                    haskeline >=0.7.4 && <0.8,
                    haskell-src-exts >=1.19 && <2.0,
                    hint >=0.7 && <0.8,
                    hlint >=2.0.9 && <3.0,
                    hpc >=0.6 && <0.7,
                    json >=0.9.1,
                    lens >=4.15 && <5.0,
                    MissingH >=1.4.0.1 && <2.0,
                    mtl >=2.2 && <3.0,
                    process >=1.4 && <2.0,
                    QuickCheck >=2.10.1 && <3.0,
                    split >=0.2.3 && <0.3,
                    temporary >=1.2.0 && <2.0,
                    transformers >=0.4 && <0.6

executable drhaskell-multicall
  if flag(multicall)
    buildable: True
  else
    buildable: False
  hs-source-dirs:   src
  main-is:          Multicall.hs
  default-language: Haskell2010
  ghc-options:      -O2 -j4 -main-is Multicall
  build-depends:    base >=4.8 && <5.0,
                    containers >=0.5.6.2,
                    directory >=1.3 && <2.0,
                    edit-distance >=0.2.2.1 && <0.3,
                    exceptions >=0.8,
                    filepath >=1.4 && <2.0,
                    haskeline >=0.7.4 && <0.8,
                    haskell-src-exts >=1.19 && <2.0,
                    hint >=0.7 && <0.8,
                    hlint >=2.0.9 && <3.0,
                    hpc >=0.6 && <0.7,
                    json >=0.9.1,
                    lens >=4.15 && <5.0,
                    MissingH >=1.4.0.1 && <2.0,
                    mtl >=2.2 && <3.0,
                    process >=1.4 && <2.0,
                    QuickCheck >=2.10.1 && <3.0,
                    split >=0.2.3 && <0.3,
                    temporary >=1.2.0 && <2.0,
                    transformers >=0.4 && <0.6
